--- a/package.json
+++ b/package.json
@@ -8,21 +8,15 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.17",
-    "@stripe/react-stripe-js": "^1.16.3",
-    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
-    "file-saver": "^2.0.5",
     "framer-motion": "^10.12.4",
-    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-facebook-login": "^4.1.1",
-    "react-ga": "^3.3.1",
-    "react-google-login": "^5.2.2",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.7.1",
@@ -30,9 +24,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-search-field": "^2.0.1",
-    "react-stripe-checkout": "^2.6.3",
     "sass": "^1.52.2",
-    "states-us": "^1.0.2",
     "swiper": "^8.4.4",
     "tailwindcss": "^3.3.1",
     "web-vitals": "^2.1.4",
