--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
+    "firebase": "^10.0.0",
     "framer-motion": "^10.12.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "postcss": "^8.4.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
