--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.52.2",
     "swiper": "^8.4.4",
     "tailwindcss": "^3.3.1",
+    "three": "^0.154.0",
     "web-vitals": "^2.1.4",
     "wretch": "^2.3.2",
     "yup": "^1.1.1"
